# MyLearnOpenGL

./: CMakeLists.txt
Shaders/: Dimk.fs  Red.fs  Red.vs  lamp.vs  obj.fs  obj.vs
include/: camera.hpp  shader.hpp
src/: main.cpp  shader.cpp
